force-app/main/default/objects/Contact/fields/Responsys_City__c.field-meta.xml
<CustomField>
    <fullName>Responsys_City__c</fullName>
    <description>(Tourism) field for Responsys address</description>
    <formula>IF( ISBLANK(MailingPostalCode),  Account.BillingCity  , MailingCity)</formula>
    <label>Responsys City</label>
    <type>Text</type>
</CustomField>