force-app/main/default/objects/Contact/fields/Responsys_Country__c.field-meta.xml
<CustomField>
    <fullName>Responsys_Country__c</fullName>
    <description>(Tourism) Field for Responsys mail shots</description>
    <formula>IF( ISBLANK(MailingPostalCode), Account.BillingCountry , MailingCountry)</formula>
    <label>Responsys Country</label>
    <type>Text</type>
</CustomField>