force-app/main/default/objects/Contact/fields/Responsys_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Responsys_Postcode__c</fullName>
    <description>Address field for Responsys</description>
    <formula>IF(  ISBLANK(MailingPostalCode),  Account.BillingPostalCode , MailingPostalCode)</formula>
    <label>Responsys Postcode</label>
    <type>Text</type>
</CustomField>