force-app/main/default/objects/Contact/fields/Responsys_State_P__c.field-meta.xml
<CustomField>
    <fullName>Responsys_State_P__c</fullName>
    <description>(Tourism) Field used by Responsys for reporting</description>
    <formula>IF( ISBLANK(MailingPostalCode), Account.BillingState  ,  MailingState )</formula>
    <label>Responsys State/Province</label>
    <type>Text</type>
</CustomField>