force-app/main/default/objects/Contact/fields/Responsys_Street__c.field-meta.xml
<CustomField>
    <fullName>Responsys_Street__c</fullName>
    <description>(Tourism) Field for Responsys address</description>
    <formula>IF( ISBLANK(MailingPostalCode), Account.BillingStreet , MailingStreet)</formula>
    <label>Responsys Street</label>
    <type>Text</type>
</CustomField>