force-app/main/default/objects/Contact/fields/Secondary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Address__c</fullName>
    <description>Used for genuine secondary address fields OR generic email addresses, like info@company.com, since the email address field is a unique field (Tourism only) but two separate contacts may share an email address.

This field will NOT be used by Responsys (only [Primary] email)</description>
    <inlineHelpText>If a Contact is using a group email address (e.g. info@company.com) then please enter it here instead of the Primary email address field.</inlineHelpText>
    <label>Secondary Email Address</label>
    <type>Email</type>
</CustomField>