force-app/main/default/objects/Contact/fields/Show_in_Community__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Community</label>
    <type>Checkbox</type>
</CustomField>