force-app/main/default/objects/Contact/fields/Temp_Email__c.field-meta.xml
<CustomField>
    <fullName>Temp_Email__c</fullName>
    <label>Temp Email</label>
    <type>Email</type>
</CustomField>