force-app/main/default/objects/Contact/fields/Total_Trade_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Trade_Events__c</fullName>
    <formula>Trade_Event_Invites__c +  Trade_Events_Accepted__c +  Trade_Events_Attended__c +  Trade_Events_Declined__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Trade Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>