force-app/main/default/objects/Contact/fields/Trade_Event_Invited__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event_Invited__c</fullName>
    <inlineHelpText>No of Trade Events with Status Invited</inlineHelpText>
    <label>Trade Event Invited</label>
    <summaryFilterItems>
        <field>Trade_Event_Attendee__c.Invite_Status__c</field>
        <operation>equals</operation>
        <value>Invited</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Event_Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>