force-app/main/default/objects/Contact/fields/Trade_Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>Trade_Events_Attended__c</fullName>
    <inlineHelpText>No of Trade Events with Status Attended</inlineHelpText>
    <label>Trade Events Attended</label>
    <summaryFilterItems>
        <field>Trade_Event_Attendee__c.Invite_Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Event_Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>