force-app/main/default/objects/Contact/fields/Trade_Events_Declined__c.field-meta.xml
<CustomField>
    <fullName>Trade_Events_Declined__c</fullName>
    <inlineHelpText>No of Trade Events with Status Declined</inlineHelpText>
    <label>Trade Events Declined</label>
    <summaryFilterItems>
        <field>Trade_Event_Attendee__c.Invite_Status__c</field>
        <operation>equals</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Event_Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>