force-app/main/default/objects/Contact/recordTypes/Brand_Contact.recordType-meta.xml
<RecordType>
    <fullName>Brand_Contact</fullName>
    <active>true</active>
    <description>All Brand Contacts</description>
    <label>Brand Contact</label>
</RecordType>