force-app/main/default/objects/Contact/validationRules/B2T_B2B_minimum_details_required.validationRule-meta.xml
<ValidationRule>
    <fullName>B2T_B2B_minimum_details_required</fullName>
    <active>true</active>
    <description>A Contact should only be able to be created if it has at least one of - mobile / phone / email address</description>
    <errorConditionFormula>AND(ISBLANK(Email),ISBLANK(Phone) ,ISBLANK(MobilePhone)
, OR( RecordType.DeveloperName = &quot;Brand_Contact&quot; , RecordType.DeveloperName = &quot;Tourism_Contact&quot;))</errorConditionFormula>
    <errorMessage>At least one of  Mobile, Phone or Email address must be entered before you can save the record.</errorMessage>
</ValidationRule>