force-app/main/default/objects/Contact/validationRules/Do_Not_allow_B2B_Contacts_2_move_Brand.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_allow_B2B_Contacts_2_move_Brand</fullName>
    <active>true</active>
    <description>Blocks users from being able to move Brand Contacts from one account to another.</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Contact_Validations_Active__c 
&amp;&amp;
ISCHANGED( AccountId ) 
&amp;&amp; ISNEW() = false 
&amp;&amp; RecordType.DeveloperName = &quot;Brand_Contact&quot;
&amp;&amp;  $User.Id  != &quot;005b0000001VPTn&quot;</errorConditionFormula>
    <errorMessage>Sorry - A contact cannot move from one Brand to another. Please Archive the Contact and Re-Create the Contact under their new Brand</errorMessage>
</ValidationRule>