force-app/main/default/objects/Contact/listViews/GoYes_Vacanze.listView-meta.xml
<ListView>
    <fullName>GoYes_Vacanze</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>GoYes Vacanze</label>
    <language>en_US</language>
</ListView>