force-app/main/default/objects/Contact/listViews/Investor_Contacts.listView-meta.xml
<ListView>
    <fullName>Investor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012b0000000UdBz</value>
    </filters>
    <label>Investor Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <role>Business_Systems</role>
        <role>Investor_CRM</role>
    </sharedTo>
</ListView>