force-app/main/default/objects/Contact/listViews/Tourism_Contacts.listView-meta.xml
<ListView>
    <fullName>Tourism_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Tourism_Contact</value>
    </filters>
    <label>Tourism Contacts</label>
    <sharedTo>
        <roleAndSubordinates>Group_Tourism</roleAndSubordinates>
        <roleAndSubordinates>IT_Management</roleAndSubordinates>
    </sharedTo>
</ListView>